# pwr-gk

./: .gitignore  CMakeLists.txt  README.md  main.cc
class1/: CMakeLists.txt
class1/doc/: sierpinski.tex
class1/src/: main.cc
class2/: CMakeLists.txt
class2/src/: main.cc
class3/: CMakeLists.txt
class3/src/: main.cc
class4/: CMakeLists.txt
class4/src/: main.cc
class5/: CMakeLists.txt
class5/src/: main.cc
doc/: build.sh  c2_keyboard.cc  c3_keyboard.cc  c3_renderscene.cc  c4_movelight.cc  c4_norms.cc  c4_secondlight.cc  c5_texegg.cc  c5_tri.cc  class1.cc  drawegg_points.cc  drawegg_triangles.cc  drawegg_tricolo.cc  spraw.tex
